Fix restriction of voice channel

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A discord bot filled with 87 power.",
   "main": "index.js",
   "scripts": {
+    "start": "npm i; pm2 start main.js --name power87",
     "update": "git pull; pm2 stop power87; pm2 reset power87; pm2 start power87; pm2 monit"
   },
   "repository": {
