Fix direct message channel event

--- a/config.js.example
+++ b/config.js.example
@@ -1,8 +1,12 @@
 module.exports = {
-    FIREBASE: {},
-    LoggerHook: {
-        id: '',
-        token: ''
-    },
-    TOKEN: ''
+  FIREBASE: {},
+  LoggerHook: {
+    id: '',
+    token: ''
+  },
+  TOKEN: '',
+  admins: {
+    ID: 'name'
+  },
+  tick: 360000
 }
